AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS="-Im4"

AM_DEFAULT_SOURCE_EXT = .cpp

lib_LTLIBRARIES = libnt_segment.la

libnt_segment_la_CFLAGS = $(HDF5_CFLAGS) $(OPENMP_CFLAGS)
libnt_segment_la_CXXFLAGS = $(HDF5_CXXFLAGS) $(OPENMP_CXXFLAGS)
libnt_segment_la_CPPFLAGS = $(HDF5_CPPFLAGS) 
libnt_segment_la_LDFLAGS = $(HDF5_LDFLAGS) $(OPENMP_CXXFLAGS)
libnt_segment_la_SOURCES = 

